2012-03-14  Grant Edwards <grant.b.edwards@gmail.com>

	* src/generic-stub.c (process_query): Fix compiler warning about
	variable that is set but not used (only used in conditionally
	compiled code). [ Bugzilla 1001535 ]
	
2012-03-09  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* src/hal_if.c (hal_ctrlc_check): Fix compiler warning about
	variable that is set but not used (isr_ret has been removed).

2011-01-13  John Dallaway  <john@dallaway.org.uk>

	* cdl/hal.cdl: Add a CDL interface to control whether interrupt
	state must be saved. [ Bugzilla 1001111 ]
	* cdl/debugging.cdl: Implement the new interface within GDB Ctrl-C
	break options.
	* src/hal_if.c: Make declaration of the hal_saved_interrupt_state
	variable conditional on an implementation of the new CDL interface.

2010-11-20  John Dallaway  <john@dallaway.org.uk>

	* cdl/hal.cdl: Suppress -fprofile-arcs (which implies -lgcov) when
	generating extras.o.

2010-10-09  John Dallaway  <john@dallaway.org.uk>

	* doc/porting.sgml: Delete references to the memory layout editor.

2009-02-02  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal.cdl: add CYGBLD_GLOBAL_WARNFLAGS, as part of global
	compiler flags update.

2008-11-21  Bart Veer  <bartv@ecoscentric.com>

	* include/hal_if.h (CYGNUM_CALL_IF_available_x): fix typo in
	previous patch.

2008-11-20  Bart Veer  <bartv@ecoscentric.com>

	* cdl/hal.cdl, include/hal_if.h, src/hal_if.c: expunge
	CYGSEM_HAL_VIRTUAL_VECTOR_CLAIM_CACHE and the corresponding code.

2008-05-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/thread-packets.c (threadmatch): Silence pointer signedness
	warning.
	(threadref_to_int): Ditto.
	* src/generic-stub.c (__mem2hex): Ditto.
	(__mem2hex_safe): Ditto.
	(__hex2mem): Ditto.
	(__hex2mem_safe): Ditto.
	* src/hal_if.c (delay_us): Ditto.
	* include/hal_stub.h (CYG_HAL_GDB_LEAVE_CRITICAL_IO_REGION):
	Instead of using a local variable to avoid compiler reordering
	when taking the address of a label, instead call an external function.